# image-watermarker

./: .gitignore  AppIcon.icns  CHANGELOG  LICENSE  README.md  README.rst  consts.py  folder.py  gui.py  main.py  pyproject.toml  translations.json  translator.py
.github/workflows/: desktop-builds.yml  windows-build.yml
macos/: entitlements.plist
src/: entitlements.plist  main.py  translations.json
src/image_watermarker/: __main__.py  app.py  watermarker.py
src/image_watermarker.dist-info/: METADATA  top_level.txt
src/image_watermarker/resources/: AppIcon.icns
src/image_watermarker/widgets/: folder_opener.py  folder_selector.py  option.py
src/pythonapp/: __main__.py  app.py
